--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,14 @@
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: circleci/node:8.5
+    - image: circleci/python:3.5.4-node-browsers
+      environment:
+        PGHOST: 127.0.0.1
+    - image: circleci/postgres:9.6.2
+      environment:
+        POSTGRES_USER: ubuntu
+        POSTGRES_DB: fstool_e2etest
+    - image: redis:3.2.11
 
 version: 2
 jobs:
@@ -11,13 +18,13 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-{{ checksum "client/package.json" }}
           - v1-dependencies-
       - run: yarn
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "client/package.json" }}
       - persist_to_workspace:
           root: ~/repo
           paths:
@@ -28,13 +35,11 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/repo
-      - run: yarn test --ci --runInBand
-      - run: bash <(curl -s https://codecov.io/bash)
+      - run: cd client && yarn test --ci --runInBand
+      - run: cd client && bash <(curl -s https://codecov.io/bash)
 
   install-e2e-dependencies:
-    working_directory: ~/repo
-    docker:
-      - image: node:8.5
+    <<: *defaults
     steps:
       - attach_workspace:
           at: ~/repo
@@ -42,12 +47,7 @@ jobs:
           name: prepare backend
           command: |
             set -x
-            export LC_ALL=C.UTF-8
-            export LANG=C.UTF-8
-            apt-get update
-            apt-get install -y python3 python3-dev virtualenv
-            git clone https://github.com/yunity/karrot-backend
-            cd karrot-backend
+            cd server
             virtualenv -p python3 env
             env/bin/pip install --upgrade pip
             env/bin/pip install -r requirements-dev.txt
@@ -56,19 +56,23 @@ jobs:
       - persist_to_workspace:
           root: ~/repo
           paths:
-            - karrot-backend/*
+            - server/*
+
+  backend-test:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - run: backend test
+        command: |
+          set -x
+          coverage run manage.py test
+          flake8 ./
+          coverage html -d $CIRCLE_ARTIFACTS
+          pip install codecov && codecov
 
   e2e-test:
-    working_directory: ~/repo
-    docker:
-      - image: node:8.5
-        environment:
-          PGHOST: 127.0.0.1
-      - image: circleci/postgres:9.6.2
-        environment:
-          POSTGRES_USER: ubuntu
-          POSTGRES_DB: fstool_e2etest
-      - image: redis:3.2.11
+    <<: *defaults
     steps:
       - attach_workspace:
           at: ~/repo
@@ -76,17 +80,13 @@ jobs:
           name: run backend
           command: |
             set -x
-            export LC_ALL=C.UTF-8
-            export LANG=C.UTF-8
-            apt-get update
-            apt-get install -y python3 python3-dev virtualenv
-            cd karrot-backend
+            cd server
             env/bin/python manage.py migrate
             env/bin/python manage.py runserver
           background: true
       - run:
           name: run frontend
-          command: yarn serve
+          command: cd client && yarn serve
           background: true
       - run:
           name: wait for frontend to get ready
@@ -96,75 +96,51 @@ jobs:
           command: wget --retry-connrefused -T 30 http://localhost:8000/api/groups-info/
       - run:
           name: list all available browsers for your personal benefit
-          command: $(yarn bin)/testcafe -b saucelabs
+          command: cd client && $(yarn bin)/testcafe -b saucelabs
           background: true
       - run:
           name: testcafe
-          command: yarn e2e --ci
+          command: cd client && yarn e2e --ci
 
   lint:
     <<: *defaults
     steps:
       - attach_workspace:
           at: ~/repo
-      - run: yarn lint
+      - run: cd client && yarn lint
 
   build:
     <<: *defaults
     steps:
       - attach_workspace:
           at: .
-      - run: yarn build
+      - run: cd client && yarn build
       - persist_to_workspace:
           root: ~/repo
           paths:
-            - dist
+            - client/dist
 
   build-storybook:
     <<: *defaults
     steps:
       - attach_workspace:
           at: .
-      - run: yarn build-storybook
+      - run: cd client && yarn build-storybook
       - persist_to_workspace:
           root: ~/repo
           paths:
-            - storybook-static
+            - client/storybook-static
 
   build-docs:
     <<: *defaults
     steps:
       - attach_workspace:
           at: .
-      - run: yarn build-docs
+      - run: cd client && yarn build-docs
       - persist_to_workspace:
           root: ~/repo
           paths:
-            - docs-dist
-
-  deploy-dev:
-    <<: *defaults
-    steps:
-      - run: sudo apt install -y rsync
-      - checkout
-      - attach_workspace:
-          at: ~/repo
-      - deploy:
-          name: Dev Deploy
-          command: |
-            ./deploy.sh "${CIRCLE_BRANCH}" "${CIRCLE_BRANCH}"
-
-  deploy-release:
-    <<: *defaults
-    steps:
-      - run: sudo apt install -y rsync
-      - checkout
-      - attach_workspace:
-          at: ~/repo
-      - deploy:
-          name: Release Deploy
-          command: |
-            ./deploy.sh "${CIRCLE_BRANCH}" release
+            - client/docs-dist
 
 workflows:
   version: 2
@@ -186,31 +162,12 @@ workflows:
       - build-docs:
           requires:
             - install-dependencies
-      - deploy-dev:
-          filters:
-            branches:
-              only:
-                - master
-          requires:
-            - test
-            - lint
-            - build
-            - build-storybook
-            - build-docs
-      - approval:
-          type: approval
-          requires:
-            - deploy-dev
       - install-e2e-dependencies:
           requires:
-            - approval
-      - e2e-test:
+            - install-dependencies
+      - backend-test:
           requires:
             - install-e2e-dependencies
-      - deploy-release:
-          filters:
-            branches:
-              only:
-                - master
+      - e2e-test:
           requires:
-            - e2e-test
+            - backend-test
