--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,15 @@
-defaults: &defaults
-  working_directory: ~/repo
-  docker:
-    - image: circleci/python:3.5.4-node-browsers
-      environment:
-        PGHOST: 127.0.0.1
-    - image: circleci/postgres:9.6.2
-      environment:
-        POSTGRES_USER: ubuntu
-        POSTGRES_DB: fstool_e2etest
-    - image: redis:3.2.11
+aliases:
+  - &defaults
+    working_directory: ~/repo
+    docker:
+      - image: circleci/python:3.5.4-node-browsers
+        environment:
+          PGHOST: 127.0.0.1
+      - image: circleci/postgres:9.6.2
+        environment:
+          POSTGRES_USER: ubuntu
+          POSTGRES_DB: fstool_e2etest
+      - image: redis:3.2.11
 
 version: 2
 jobs:
