--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
             set -x
             sudo apt-get update && sudo apt-get install -y virtualenv
             cd server
+            virtualenv env
             env/bin/pip install --upgrade pip
             env/bin/pip install -r requirements-dev.txt
             env/bin/pip-sync requirements*.txt
@@ -67,6 +68,8 @@ jobs:
       - run: backend test
         command: |
           set -x
+          sudo apt-get update && sudo apt-get install -y virtualenv
+          cd server
           env/bin/coverage run manage.py test
           env/bin/flake8 ./
           env/bin/coverage html -d $CIRCLE_ARTIFACTS
@@ -82,6 +85,7 @@ jobs:
           command: |
             set -x
             cd server
+            sudo apt-get update && sudo apt-get install -y virtualenv
             env/bin/python manage.py migrate
             env/bin/python manage.py runserver
           background: true
