--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
             set -x
             sudo apt-get update && sudo apt-get install -y virtualenv
             cd server
-            virtualenv env
+            virtualenv -p python3 env
             env/bin/pip install --upgrade pip
             env/bin/pip install -r requirements-dev.txt
             env/bin/pip-sync requirements*.txt
