--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: Initialize metadata
           command: |
-            ./find_changed_projects.py | tee -a $BASH_ENV
+            ./.circleci/find_changed_projects.py | tee -a $BASH_ENV
 
       - run:
           name: try out
