--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
     <<: *defaults
     working_directory: ~/build-root/client
     steps:
-      - attach_workspace: { at: ~/build-root }
+      - attach_workspace:
+          at: ~/build-root
       - run:
           name: Check whether client changed
           command: |
@@ -56,8 +57,8 @@ jobs:
     <<: *defaults
     working_directory: ~/build-root/server
     steps:
-      - checkout: { path: ~/build-root }
-      - attach_workspace: { at: ~/build-root }
+      - attach_workspace:
+          at: ~/build-root
       - run:
           name: Check whether server changed
           command: |
@@ -87,8 +88,8 @@ jobs:
     <<: *defaults
     working_directory: ~/build-root/docs
     steps:
-      - checkout: { path: ~/build-root }
-      - attach_workspace: { at: ~/build-root }
+      - attach_workspace:
+          at: ~/build-root
       - run:
           name: Check whether docs changed
           command: |
